# liblc3_dart_plugin

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
ios/: liblc3_dart_plugin.podspec
ios/Classes/: liblc3_dart_plugin.c
lib/: lc3_decoder_bindings.dart  liblc3_dart_plugin.dart
src/: CMakeLists.txt  decoder.c  decoder.h
